JDK 9: sun.misc ->jdk.internals.misc
Java package with VM and SharedSecrets classes changed from sun.misc to jdk.internals.misc with JDK 9.